# QImageViewer

./: CMakeLists.txt  QImageViewer_zh_CN.ts  README.md  aboutdialog.ui  dirmodel.cpp  dirmodel.h  filenavigator.cpp  filenavigator.h  icons.qrc  imagemetainfo.cpp  imagemetainfo.h  imagemetainfomodel.cpp  imagemetainfomodel.h  imagewidget.cpp  imagewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h  thumbnailview.cpp  thumbnailview.h
libs/qtimageformats/: webp.diff
libs/tinyexif/: LICENSE.txt  TinyEXIF.cpp  TinyEXIF.h
settingsdialog/: appearancesettingswidget.cpp  appearancesettingswidget.h  appearancesettingswidget.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  settingswidget.cpp  settingswidget.h  viewsettingswidget.cpp  viewsettingswidget.h  viewsettingswidget.ui
widgets/: resizeawarelistview.cpp  resizeawarelistview.h
